--- a/resume3.html
+++ b/resume3.html
@@ -19,7 +19,7 @@
 {"@type":"WebPage","url":"http://www.chrisdelozier.com/resume.html","description":"Chris DeLozier’s Personal Web Site","headline":"Christopher DeLozier","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
-    <link rel="stylesheet" type="text/css" href="splendor.css">
+    <link rel="stylesheet" type="text/css" href="http://www.chrisdelozier.com/splendor.css">
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
