--- a/htmlresume.html
+++ b/htmlresume.html
@@ -13,6 +13,7 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Chris DeLozier’s Personal Web Site" />
 <meta property="og:description" content="Chris DeLozier’s Personal Web Site" />
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="canonical" href="http://www.chrisdelozier.com/resume.html" />
 <meta property="og:url" content="http://www.chrisdelozier.com/resume.html" />
 <meta property="og:site_name" content="chrisdelozier.github.io" />
