--- a/htmlresume.html
+++ b/htmlresume.html
@@ -14,6 +14,8 @@
 <meta name="description" content="Chris DeLozier’s Personal Web Site" />
 <meta property="og:description" content="Chris DeLozier’s Personal Web Site" />
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="canonical" href="http://www.chrisdelozier.com/resume.html" />
 <meta property="og:url" content="http://www.chrisdelozier.com/resume.html" />
 <meta property="og:site_name" content="chrisdelozier.github.io" />
