--- a/htmlresume.html
+++ b/htmlresume.html
@@ -97,7 +97,7 @@
 
 <h2 id="accomplishments-and-honors">Accomplishments and Honors</h2>
 
-<ul>
+<ul class="w2-ul">
   <li>Diamond Ranked National Forensic League Speech and Debate Coach</li>
   <li>Four year Top Performer award at Geek Squad</li>
   <li>Employee of the Month or Employee of the Quarter at least annually every year while at Best Buy</li>
